// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@media  {
  .c-dKwMvT {
    align-items: center;
    background-color: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    letter-spacing: 0.02em;
    padding: unset;
    text-decoration: none;
    transition: all 125ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dKwMvT[disabled] {
    background-color: var(--colors-tonal100);
    border-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }

  .c-dBUxNn {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-width: 2;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-jBOHFZ {
    animation-name: k-gJNjLs;
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    background-color: currentColor;
    border-radius: var(--radii-round);
  }

  .c-jBOHFZ:nth-child(1) {
    animation-delay: -300ms;
  }

  .c-jBOHFZ:nth-child(2) {
    animation-delay: -150ms;
  }

  .c-jBOHFZ:nth-child(3) {
    animation-delay: 0;
  }
}

@media  {
  .c-dKwMvT-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-dBUxNn-kupcZn-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-dKwMvT-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }

  .c-dKwMvT-NDVFZ-isLoading-true {
    cursor: not-allowed;
    opacity: 0.5;
    pointer-events: none;
  }

  .c-jBOHFZ-jIYkAt-size-md {
    height: 6px;
    width: 6px;
    margin-left: 2px;
    margin-right: 2px;
  }
}

@media  {
  .c-dKwMvT-epyqWI-cv {
    background-color: var(--colors-primary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):hover,
  .c-dKwMvT-epyqWI-cv:not([disabled]):focus {
    background-color: var(--colors-tertiary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):active {
    background-color: var(--colors-primary);
  }

  .c-dKwMvT-cRpAgC-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):hover,
  .c-dKwMvT-cRpAgC-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-tertiary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):active {
    color: var(--colors-primary);
  }
}

@media  {
  .c-dBUxNn-ihbvLxt-css {
    margin-left: var(--space-3);
  }

  .c-dhzjXW-ihMdMjL-css {
    justify-content: center;
    opacity: 1;
    position: absolute;
    transition: opacity 150ms;
  }

  .c-PJLV-ikHJJOk-css {
    opacity: 0;
    transition: opacity 150ms;
  }
}

<div>
  <button
    class="c-dKwMvT c-dKwMvT-elrwsr-size-md c-dKwMvT-NDVFZ-isLoading-true c-dKwMvT-epyqWI-cv"
    type="button"
  >
    <div
      class="c-dhzjXW c-dhzjXW-ihMdMjL-css"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
    </div>
    <span
      class="c-PJLV c-PJLV-ikHJJOk-css"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
@media  {
  .c-dKwMvT {
    align-items: center;
    background-color: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    letter-spacing: 0.02em;
    padding: unset;
    text-decoration: none;
    transition: all 125ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dKwMvT[disabled] {
    background-color: var(--colors-tonal100);
    border-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }
}

@media  {
  .c-dKwMvT-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-dKwMvT-epyqWI-cv {
    background-color: var(--colors-primary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):hover,
  .c-dKwMvT-epyqWI-cv:not([disabled]):focus {
    background-color: var(--colors-tertiary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):active {
    background-color: var(--colors-primary);
  }
}

<div>
  <button
    class="c-dKwMvT c-dKwMvT-elrwsr-size-md c-dKwMvT-epyqWI-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
@media  {
  .c-dKwMvT {
    align-items: center;
    background-color: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    letter-spacing: 0.02em;
    padding: unset;
    text-decoration: none;
    transition: all 125ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dKwMvT[disabled] {
    background-color: var(--colors-tonal100);
    border-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }

  .c-dBUxNn {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-width: 2;
    vertical-align: middle;
  }
}

@media  {
  .c-dKwMvT-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-dBUxNn-kupcZn-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }
}

@media  {
  .c-dKwMvT-epyqWI-cv {
    background-color: var(--colors-primary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):hover,
  .c-dKwMvT-epyqWI-cv:not([disabled]):focus {
    background-color: var(--colors-tertiary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):active {
    background-color: var(--colors-primary);
  }

  .c-dKwMvT-cRpAgC-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):hover,
  .c-dKwMvT-cRpAgC-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-tertiary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):active {
    color: var(--colors-primary);
  }
}

@media  {
  .c-dBUxNn-ihbvLxt-css {
    margin-left: var(--space-3);
  }
}

<div>
  <button
    class="c-dKwMvT c-dKwMvT-elrwsr-size-md c-dKwMvT-epyqWI-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-dBUxNn c-dBUxNn-kupcZn-size-sm c-dBUxNn-ihbvLxt-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
@media  {
  .c-dKwMvT {
    align-items: center;
    background-color: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    letter-spacing: 0.02em;
    padding: unset;
    text-decoration: none;
    transition: all 125ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dKwMvT[disabled] {
    background-color: var(--colors-tonal100);
    border-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }
}

@media  {
  .c-dKwMvT-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-dKwMvT-epyqWI-cv {
    background-color: var(--colors-primary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):hover,
  .c-dKwMvT-epyqWI-cv:not([disabled]):focus {
    background-color: var(--colors-tertiary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):active {
    background-color: var(--colors-primary);
  }

  .c-dKwMvT-cRpAgC-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):hover,
  .c-dKwMvT-cRpAgC-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-tertiary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):active {
    color: var(--colors-primary);
  }
}

<div>
  <button
    class="c-dKwMvT c-dKwMvT-elrwsr-size-md c-dKwMvT-epyqWI-cv"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled warning outline button 1`] = `
@media  {
  .c-dKwMvT {
    align-items: center;
    background-color: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    letter-spacing: 0.02em;
    padding: unset;
    text-decoration: none;
    transition: all 125ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dKwMvT[disabled] {
    background-color: var(--colors-tonal100);
    border-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }
}

@media  {
  .c-dKwMvT-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-dKwMvT-epyqWI-cv {
    background-color: var(--colors-primary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):hover,
  .c-dKwMvT-epyqWI-cv:not([disabled]):focus {
    background-color: var(--colors-tertiary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):active {
    background-color: var(--colors-primary);
  }

  .c-dKwMvT-cRpAgC-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):hover,
  .c-dKwMvT-cRpAgC-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-tertiary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):active {
    color: var(--colors-primary);
  }
}

<div>
  <button
    class="c-dKwMvT c-dKwMvT-elrwsr-size-md"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
@media  {
  .c-dKwMvT {
    align-items: center;
    background-color: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    letter-spacing: 0.02em;
    padding: unset;
    text-decoration: none;
    transition: all 125ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dKwMvT[disabled] {
    background-color: var(--colors-tonal100);
    border-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }
}

@media  {
  .c-dKwMvT-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }
}

@media  {
  .c-dKwMvT-epyqWI-cv {
    background-color: var(--colors-primary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):hover,
  .c-dKwMvT-epyqWI-cv:not([disabled]):focus {
    background-color: var(--colors-tertiary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):active {
    background-color: var(--colors-primary);
  }

  .c-dKwMvT-cRpAgC-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):hover,
  .c-dKwMvT-cRpAgC-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-tertiary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):active {
    color: var(--colors-primary);
  }
}

<div>
  <button
    class="c-dKwMvT c-dKwMvT-elrwsr-size-md c-dKwMvT-cRpAgC-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a rounded button  1`] = `
@media  {
  .c-dKwMvT {
    align-items: center;
    background-color: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    letter-spacing: 0.02em;
    padding: unset;
    text-decoration: none;
    transition: all 125ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dKwMvT[disabled] {
    background-color: var(--colors-tonal100);
    border-color: var(--colors-tonal100);
    color: var(--colors-tonal600);
    cursor: not-allowed;
  }

  .c-dBUxNn {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-width: 2;
    vertical-align: middle;
  }
}

@media  {
  .c-dKwMvT-elrwsr-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
  }

  .c-dBUxNn-kupcZn-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-dKwMvT-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }
}

@media  {
  .c-dKwMvT-epyqWI-cv {
    background-color: var(--colors-primary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):hover,
  .c-dKwMvT-epyqWI-cv:not([disabled]):focus {
    background-color: var(--colors-tertiary);
    color: white;
  }

  .c-dKwMvT-epyqWI-cv:not([disabled]):active {
    background-color: var(--colors-primary);
  }

  .c-dKwMvT-cRpAgC-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):hover,
  .c-dKwMvT-cRpAgC-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-tertiary);
    background-color: white;
  }

  .c-dKwMvT-cRpAgC-cv:not([disabled]):active {
    color: var(--colors-primary);
  }
}

@media  {
  .c-dBUxNn-ihbvLxt-css {
    margin-left: var(--space-3);
  }
}

<div>
  <button
    class="c-dKwMvT c-dKwMvT-elrwsr-size-md c-dKwMvT-rloUt-isRounded-true c-dKwMvT-epyqWI-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-dBUxNn c-dBUxNn-kupcZn-size-sm c-dBUxNn-ihbvLxt-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
